--- a/style.css
+++ b/style.css
@@ -20,6 +20,15 @@ ul li img {
   vertical-align: middle;
 }
 
+h1 {
+  color: #68a897;
+  text-align: center;
+  font-size: 52px;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 15px;
+}
+
 h3 {
   color: #526175;
 }
@@ -90,12 +99,73 @@ h3 {
 .dropdown:hover .dropdown-content {
   display: block;
 }
-/*ima*/
+/*imagem inicial*/
 
 .imagem-inicial img {
   margin-top: 10px;
   width: 100%;
 }
+
+
+.profissional img {
+  max-width: 100%;
+  width: 250px;
+  border-radius: 20px;
+  border: 2px solid #68a897;
+}
+
+.profissional {
+  color: #68a897;
+  margin-top: 20px;
+  width: 20%;
+  text-align: center;
+}
+.profissionais h2 {
+  color: #68a897;
+  text-align: center;
+}
+
+/*Especializões*/
+.especializacoes {
+  display: flex;
+  margin-bottom: 30px;
+  justify-content: space-around;
+}
+
+.quadrado-espec {
+  width: 300px;
+  height: 330px;
+  background-color: #eff4f2;
+  box-shadow: 0px 0px 10px rgba(73, 78, 92, 0.15);
+  border: 2px solid #75bfab;
+  border-radius: 20px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.quadrado-espec img {
+  max-width: 100%;
+  width: 120px;
+  height: auto;
+}
+
+.quadrado-espec button {
+  margin-top: 15px;
+  padding: 10px 20px;
+  background-color: #68a897;
+  color: #eff4f2;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.quadrado-espec button:hover {
+  background-color: #5c8b7d;
+}
+
 
 /* Solicitar atendimento*/
 .img-solicitar img {
@@ -185,25 +255,7 @@ input[type="datetime-local"] {
   margin: auto 60px;
 }
 
-.profissional img {
-  max-width: 100%;
-  width: 250px;
-  border-radius: 20px;
-  border: 2px solid #68a897;
-}
-
-.profissional {
-  color: #68a897;
-  margin-top: 20px;
-  width: 20%;
-  text-align: center;
-}
-.profissionais h2 {
-  color: #68a897;
-  text-align: center;
-}
-
-/* LOGIN */
+/* Login */
 
 .login-container {
   display: flex;
@@ -213,7 +265,6 @@ input[type="datetime-local"] {
   justify-content: center;
   flex-direction: column;
   text-align: left;
-  font-family: "Montserrat", sans-serif;
   border: 1px solid #75bfab;
   border-radius: 20px;
   width: 35%;
@@ -225,7 +276,6 @@ input[type="datetime-local"] {
   width: 400px;
   border: 1px solid lightgray;
   border-radius: 3px;
-  font-family: "Montserrat", sans-serif;
 }
 
 .login-container section {
@@ -242,7 +292,6 @@ input[type="datetime-local"] {
 
 .login-container select {
   width: 100%;
-  font-family: "Montserrat", sans-serif;
   padding: 8px;
   border: 1px solid #cccccc;
   border-radius: 3px;
@@ -268,7 +317,7 @@ input[type="datetime-local"] {
   margin-left: 4px;
   padding: 5px;
   font-size: 18px;
-  color: white;
+  color: #eff4f2;
   border: none;
   background-color: #75bfab;
   width: 100%;
@@ -288,64 +337,6 @@ input[type="datetime-local"] {
   color: #75bfab;
 }
 
-/*Especializões*/
-
-.especializacoes {
-  display: flex;
-  margin-bottom: 30px;
-  justify-content: space-around;
-}
-
-h1 {
-  color: #68a897;
-  text-align: center;
-  font-size: 52px;
-  text-decoration: underline;
-  text-decoration-thickness: 1px;
-  text-underline-offset: 15px;
-}
-
-text.esp {
-  color: #red;
-}
-
-.quadrado-espec {
-  width: 300px;
-  height: 330px;
-  background-color: #eff4f2;
-  box-shadow: 0px 0px 10px rgba(73, 78, 92, 0.15);
-  border: 2px solid #75bfab;
-  border-radius: 20px;
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.quadrado-espec img {
-  max-width: 100%;
-  width: 120px;
-  height: auto;
-  margin-bottom: -10;
-}
-
-.quadrado-espec button {
-  margin-top: 15px;
-  padding: 10px 20px;
-  background-color: #68a897;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  transition: background-color 0.3s ease;
-}
-
-.quadrado-espec button:hover {
-  background-color: #5c8b7d;
-}
-
 /* Estilos para o botão flutuante */
 .btn-top {
   display: none;
@@ -353,7 +344,7 @@ text.esp {
   bottom: 20px;
   right: 20px;
   background-color: #75bfab;
-  color: white;
+  color: #eff4f2;
   border: none;
   border-radius: 50%;
   width: 40px;
@@ -361,8 +352,8 @@ text.esp {
   text-align: center;
   font-size: 24px;
   cursor: pointer;
-  align-items: center; /* Centraliza verticalmente */
-  justify-content: center; /* Centraliza horizontalmente */
+  align-items: center; 
+  justify-content: center;
 }
 
 .btn-top img {
@@ -370,8 +361,6 @@ text.esp {
   height: 40px;
   vertical-align: middle;
   filter: invert(1);
-  /*margin-top: -6px; /* Mova a imagem 5 pixels para baixo */
-  /*margin-left: -5px; /* Afasta a imagem 5 pixels para a esquerda */
 }
 
 .btn-top:hover {
@@ -380,7 +369,7 @@ text.esp {
 
 .footer {
   background-color: #68a897;
-  color: white;
+  color: #eff4f2;
   padding: 20px 0;
   height: 60%;
   bottom: 0;
@@ -503,7 +492,6 @@ text.esp {
 
 /* RESPONSIVIDADE PARA CELULARES */ 
 
-/* Estilos para dispositivos móveis (ÁREA PROFISSIONAIS E ESPECIALIZAÇÕES)*/
 @media (max-width: 768px) {
   .profissionais,
   .footer {
