💎🛬 Checkpoint ./.glitch-assets:58483452/839 ./index.html:58483452/588 ./style.css:58483452/69

--- a/style.css
+++ b/style.css
@@ -45,8 +45,9 @@ h3 {
 
 .nav-bar img{
   position: absolute;
-  width: 390px;
+  width: 430px;
   margin-top: 10px;
+  margin-left: 15px;
 }
 
 .nav-bar a {
