😎🏖 Checkpoint ./index.html:58483452/154 ./style.css:58483452/52 ./Sobre.html:58483452/154

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ ul li img {
 }
 
 h1 {
-  color: #68a897;
+  color: #75BFAB;
   text-align: center;
   font-size: 52px;
   text-decoration: underline;
@@ -64,7 +64,7 @@ h3 {
 
 .nomes-links a {
   text-decoration: none;
-  color: #75bfab;
+  color: #68A897;
   font-size: 24px;
   margin: 0 20px;
 }
