--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ h1 {
   text-decoration-thickness: 1px;
   text-underline-offset: 15px;
 }
+h2 {
+  color: #68a897;
+  text-align: center;
+}
 
 h3 {
   color: #526175;
