🏕🚴 Checkpoint ./style.css:58517880/617

--- a/style.css
+++ b/style.css
@@ -579,4 +579,19 @@ input[type="date"] {
   .footer-section1 ul li {
     margin: 5px 0; /* Espaçamento entre os nomes */
   }
+  
+  /*LOGIN*/
+  .login-container {
+    width: 90%; 
+  }
+
+  .login-container input,
+  .login-container select {
+    font-size: 14px; 
+  }
+
+  #identificador,
+  #senha {
+    background-size: 10px;
+  }
 }
