🎹🍵 Checkpoint ./style.css:58517880/3710

--- a/style.css
+++ b/style.css
@@ -499,7 +499,14 @@ input[type="date"] {
 /* RESPONSIVIDADE PARA CELULARES */
 
 @media (max-width: 768px){
-  .nav-bar img {
+   .nav-bar img {
+    position: absolute;
+    width: 250px;
+    margin-top: 10px;
+    margin-left: 15px;
+  }
+
+.nav-bar img {
     position: absolute;
     width: 250px;
     margin-top: 10px;
@@ -579,7 +586,7 @@ input[type="date"] {
   .footer-section1 ul li {
     margin: 5px 0; /* Espaçamento entre os nomes */
   }
-  
+    
   /*LOGIN*/
   .login-container {
     width: 90%;
