--- a/style.css
+++ b/style.css
@@ -606,68 +606,12 @@ input[type="date"] {
     width: 100%;
   }
 }
-
-/* RESPONSIVIDADE PARA CELULARES */
 @media screen and (min-width: 760px) {
-.nav-bar img {
-    position: absolute;
-    width: 250px;
-    margin-top: 10px;
-    margin-left: 15px;
+   .img-solicitar img {
+    margin-top: 20px;
+    margin-right: 10px;
   }
-  .texto {
-    display: flex;
-  }
-  h1 {
-    font-size: 45px;
-  }
-
-  .texto h3 {
-    padding: 10px;
-    text-align: justify;
-    margin: auto;
-    width: 90%;
-    line-height: 20px;
-    font-size: 10px;
-  }
-
-  .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow: hidden;
-  }
-
-  .footer-section1 {
-    width: 100%;
-    margin-bottom: 20px; /* Adiciona espaço entre as divs */
-    overflow: hidden;
-  }
-
-
-  .footer {
-    text-align: center; /* Centralizar o conteúdo */
-    height: auto; /* Remover a altura fixa */
-  }
-
-
-  .footer p {
-    font-size: 14px; /* Reduzir o tamanho da fonte para o texto */
-  }
-
-  .footer ul li {
-    margin-bottom: 5px; /* Reduzir a margem inferior dos itens da lista */
-  }
-  /* Alinhar os nomes abaixo de "Links Úteis" verticalmente */
-  .footer-section1 ul {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .footer-section1 ul li {
-    margin: 5px 0; /* Espaçamento entre os nomes */
-  }
+ 
   .solicitar-conteiner label,
   .solicitar-conteiner select,
   .solicitar-conteiner input[type="text"],
@@ -675,8 +619,11 @@ input[type="date"] {
     width: 80%;
     margin-left: 10px;
   }
-    /*LOGIN*/
+  
+  /*LOGIN*/
+
   .login-container input {
     width: 100%;
   }
+  
 }
