🎫🍧 Checkpoint ./style.css:58483456/2 ./script.js:58483462/270 ./cadastro.html:58483456/25

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ h3 {
   text-align: center;
 }
 
-/*Especializões*/
+/*Especializações*/
 .especializacoes {
   display: flex;
   margin-bottom: 30px;
