🐢🎈 Checkpoint ./script.js:58483462/7191 ./solicitacoes.html:58483462/45 ./style.css:58483462/113

--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ h3 {
   color: #526175;
 }
 
+#listaUsuarios{
+  background-color: #75bfab;
+}
 .nav-bar {
   background-color: #75bfab;
   color: #ffffff;
