--- a/style.css
+++ b/style.css
@@ -40,10 +40,15 @@ h3 {
 .usuarioInfo{
   background-color: #75bfab;
   border-radius: 50px;
-
   padding: 20px;
   margin-top: 20px;
   margin: 60px;
+}
+.usuarioInfo input{
+  background-color: #ffffff;
+  border-radius: 20px;
+  width: 100px;
+  padding: 15px;
 }
 .nav-bar {
   background-color: #75bfab;
