--- a/style.css
+++ b/style.css
@@ -51,8 +51,11 @@ h3 {
 }
 
 .usuarioInfo input{
-  background-color: #ffffff;
+  background-color: #68a897;
+  color: white;
+  font-size: 15px;
   border-radius: 20px;
+  border: 2px solid #75bfab;
   width: 300px;
   padding: 15px;
 }
