--- a/style.css
+++ b/style.css
@@ -247,7 +247,8 @@ input[type="date"] {
   border: 1px solid #cccccc;
   border-radius: 3px;
   font-size: 14px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 .solicitar-conteiner button {
