🍫👚 Checkpoint ./style.css:58483456/143 ./Solicitar.html:58483456/39

--- a/style.css
+++ b/style.css
@@ -268,10 +268,11 @@ input[type="date"] {
 
 }
 
-.solicitar-conteiner button {
+.enviar-solicitar {
   display: block;
-  width: 97%;
+  width: 85%;
   margin-top: 10px;
+  margin-left: 10px;
   padding: 10px;
   background-color: #75bfab;
   color: #ffffff;
