--- a/style.css
+++ b/style.css
@@ -539,9 +539,10 @@ select {
 /* RESPONSIVIDADE PARA CELULARES */
 @media screen and (max-width: 678px) {
    .nav-bar {
-    width: 100%;
+    max-width: 100%;
     margin-top: 0;
   }
+  
   .nav-bar img {
     position: absolute;
     width: 345px;
