--- a/style.css
+++ b/style.css
@@ -76,8 +76,11 @@ h3 {
   font-size: 16px;
   border-radius: 15px;
   border: 1px solid gray;
-  width: 460px;
+  width: 300px;
   padding: 15px;
+}
+.enviar-button{
+  background-color: #75bfab;
 }
 
 .nav-bar {
