--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ h3 {
 .container-button {
   text-align: center;
   margin-top: 15px;
+  margin: auto;
 }
 
 .button-agendamento {
@@ -84,10 +85,10 @@ h3 {
   color: white;
   font-family: "Montserrat", sans-serif;
   font-size: 15px;
-  border-radius: 15px;
+  border-radius: 5px;
   border: 1px solid gray;
   width: 100px;
-  padding: 10px;
+  padding: 5px;
   margin-left: 10px
 }
 
@@ -686,12 +687,14 @@ select {
 
   .container-button {
     width: 75%;
-    margin-left: 10px;
+    margin-top: 50px;
+    margin: auto;
   }
   
   .container-solicitacoes {
     width: 50%;
-    margin-left: 10px;
+    margin: auto;
+    
   }
   
   /*LOGIN*/
