--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ h3 {
   border: 1px solid gray;
   width: 300px;
   padding: 15px;
+  margin-top: 10px;
 }
 .enviar-button{
   background-color: #75bfab;
